crates/templates/tests/snapshots/parse_command_arguments_test__render-19.snap
---
source: crates/templates/tests/parse_command_arguments_test.rs
description: Parse commands defined as a sub-command
expression: output
---
parse_foo_arguments() {

  while [[ $# -gt 0 ]]; do
    key="$1"
    case "$key" in
      *)
        break
        ;;
    esac
  done
}
